Attempt fix layout order on safari browsers

--- a/stylesheets/background.css
+++ b/stylesheets/background.css
@@ -7,4 +7,5 @@
 	background-image: url('../images/background.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
+	z-index: 0;
 }
